syntax = "proto3";

import "log_entry.proto";

package stable;

message CollectionRequest {
  string id = 1;
  string path = 2;
  string description = 3;
  string icon = 4;
  string label = 5;
  string type = 6;
}

message DeleteCollectionRequest {
  string id = 1;
  string path = 2;
}


// Define the service that handles collection management
service SchemaService {
  rpc CreateCollection(CollectionRequest) returns (LogEntryMessage);
  rpc UpdateCollection(CollectionRequest) returns (LogEntryMessage);
  rpc DeleteCollection(DeleteCollectionRequest) returns (LogEntryMessage);
}
